# zebra

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FindCZMQ.cmake  FindCurl.cmake  FindLibcurl.cmake  FindLibmicrohttpd.cmake  FindMicrohttpd.cmake  Findlibcurl.cmake  Findlibmicrohttpd.cmake  Findlibsodium.cmake  Makefile.am  README.md  README.txt  Vagrantfile  ci_build.sh  ci_deploy.sh  configure.ac  license.xml  project.gyp  project.xml  setup.py  version.sh
bindings/jni/: .gitignore  CMakeLists.txt  Findzebra.cmake  README.md  build.gradle  ci_build.sh  settings.gradle
bindings/jni/android/: CMakeLists.txt  android_toolchain.cmake  build.sh
bindings/jni/msvc/: configure.bat  platform.h
bindings/jni/msvc/vs2010/: build.bat  call_javah.bat  zebra.sln
bindings/jni/msvc/vs2010/libzebrajni/: libzebrajni.props  libzebrajni.vcxproj  libzebrajni.vcxproj.filters
bindings/jni/msvc/vs2012/: build.bat  call_javah.bat  zebra.sln
bindings/jni/msvc/vs2012/libzebrajni/: libzebrajni.vcxproj
bindings/jni/msvc/vs2013/: build.bat  call_javah.bat  zebra.sln
bindings/jni/msvc/vs2013/libzebrajni/: libzebrajni.props  libzebrajni.vcxproj  libzebrajni.vcxproj.filters
bindings/jni/msvc/vs2015/: build.bat  call_javah.bat  zebra.sln
bindings/jni/msvc/vs2015/libzebrajni/: libzebrajni.props  libzebrajni.vcxproj
bindings/jni/src/main/c/: org_zeromq_XrapMsg.c  org_zeromq_ZwrClient.c  org_zeromq_zebra_XrapMsg.c  org_zeromq_zebra_XrapTraffic.c  org_zeromq_zebra_ZebClient.c  org_zeromq_zebra_ZebHandler.c  org_zeromq_zwebrap_XrapMsg.c  org_zeromq_zwebrap_ZebHandler.c  org_zeromq_zwebrap_ZwrClient.c
bindings/jni/src/main/java/org/zeromq/: XrapMsg.java  ZwrClient.java
bindings/jni/src/main/java/org/zeromq/zebra/: XrapMsg.java  (+3 more)
(+311 files in other folders)
